--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -1,1 +1,13 @@
-<h1>Login Sorin!</h1>
+{% extends getPartial('page-design') %}
+
+{% block PartialHead %}
+    <meta name="robots" content="NOINDEX, NOFOLLOW">
+    <title>{{ trans("Ceres::Template.login") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+{% endblock %}
+
+{% block PageBody %}
+    {{ component( "Ceres::Customer.Components.LoginView") }}
+    {{ component( "Ceres::Customer.Components.Login") }}
+
+    <login-view template="#vue-login-view"></login-view>
+{% endblock %}
