--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -1,1 +1,39 @@
-<h1>Register Sorin!</h1>
+{% extends getPartial('page-design') %}
+
+{% block PartialHead %}
+    <meta name="robots" content="NOINDEX, NOFOLLOW">
+    <title>{{ trans("Ceres::Template.regRegister") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+{% endblock %}
+
+{% block PageBody %}
+
+    {{ component( "Ceres::Customer.Components.Registration") }}
+    <div class="registration container-max mt-3">
+        <div class="row mb-5">
+            <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
+                <h1>
+                    {{ trans("Ceres::Template.regRegisterAccount") }}
+
+                     <popper v-cloak class="float-right">
+                        <button slot="handle" class="btn btn-icon btn-secondary btn-sm">
+                            <i class="fa fa-info"></i>
+                        </button>
+                        <div slot="title">
+                            {{ trans("Ceres::Template.regContactInformations") }}
+                        </div>
+                        <ul slot="content" class='pl-3'>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText1') }}</li>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText2') }}</li>
+                            <li class='mb-3'>{{ trans('Ceres::Template.regContactInfoText3') }}</li>
+                            <li>{{ trans('Ceres::Template.regContactInfoText4') }}</li>
+                        </ul>
+                    </popper>
+                </h1>
+
+                <div class="row">
+                    <registration template="#vue-registration" backlink="{{ request.get("backlink") | url_encode }}"></registration>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
