--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -3,6 +3,8 @@
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <title>{{ trans("Ceres::Template.regRegister") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
+    <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v=1" rel="stylesheet" type="text/css" media="all" />
+    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v=1"></script>
 {% endblock %}
 
 {% block PageBody %}
