Updates for Scripts

--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -3,6 +3,7 @@
     visibility: hidden;
 }
 
-.footer-content, .footer-features {
+.footer-content, .footer-features,
+.wrapper-main header .container-max>.row {
     display: none;
 }
