--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -1,4 +1,4 @@
-{% extends getPartial('page-design') %}
+{% extends getPartial('page-design-login') %}
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
@@ -6,8 +6,8 @@
     <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v=1" rel="stylesheet" type="text/css" media="all" />
 {% endblock %}
 
-{% block PartialFooter %}
-    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v=2"></script>
+{% block PartialFooterLatest %}
+    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v=4"></script>
 {% endblock %}
 
 
