Added login wrapper

--- a/resources/views/PageDesign/PageDesignLogin.twig
+++ b/resources/views/PageDesign/PageDesignLogin.twig
@@ -79,6 +79,6 @@
 
 {% block PartialFooterLatest %}
 {% endblock %}
-
+<div id="login" style="display:none;"><!-- BECAUSE OF ISSUES --></div>
 </body>
 </html>
