--- a/resources/views/PageDesign/PageDesignLogin.twig
+++ b/resources/views/PageDesign/PageDesignLogin.twig
@@ -1,10 +1,17 @@
 {% import "Ceres::PageDesign.Macros.IncludeComponents" as Loader %}
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 {% import "Ceres::PageDesign.Macros.Translations" as Translations %}
+{{ component( "Ceres::PageDesign.Components.Notifications" ) }}
+{{ component( "Ceres::Customer.Components.Login" ) }}
+{{ component( "Ceres::Customer.Components.Registration" ) }}
+{{ component( "Ceres::Customer.Components.ForgotPassword" ) }}
 {% set currencyFormat = config("Ceres.currency.format") %}
 {% set defaultLanguage = services.webstoreConfig.getDefaultLanguage() %}
+
 <!DOCTYPE html>
+
 <html lang="{{ lang }}" data-framework="vue" prefix="og: http://ogp.me/ns#">
+
 <head>
     {% include getPartial('head') %}
 
@@ -33,15 +40,59 @@
         <notifications template="#vue-notifications" :initial-notifications="{{ notifications | json_encode() }}"></notifications>
     </div>
 
+    <div class="wrapper wrapper-left">
+        <!-- filters -->
+    </div>
+
     <div class="wrapper wrapper-main {% if ceresConfig.header.fixNavBarPos %}isSticky{% endif %}">
         {% include getPartial('header') %}
+
         <div id="page-body" class="main">
             {% block PageBody %}
                 <!-- inject content of inherited templates here -->
             {% endblock %}
         </div>
+
+        {% include getPartial('footer') %}
+
         {% block PartialFooter %}
         {% endblock %}
+    </div>
+
+    {% if basket is not defined %}
+        {% set basket = services.basket.getBasketForTemplate() %}
+    {% endif %}
+    {% if ceresConfig.basket.previewType == "right" %}
+        <div class="wrapper wrapper-right">
+            <basket-preview :show-net-prices={{ showNetPrices | json_encode }}></basket-preview>
+        </div>
+    {% endif %}
+
+    <div class="wrapper wrapper-bottom">
+        <!-- LOGIN MODAL -->
+        <div id="login-modal-wrapper">
+            <div class="modal fade login-modal" id="login" tabindex="-1" role="dialog">
+            </div>
+        </div>
+        <!-- ./LOGIN MODAL -->
+
+        <!-- REGISTRATION MODAL -->
+        <div id="simple-registration-modal-wrapper">
+            <div class="modal fade" id="registration" tabindex="-1" role="dialog">
+            </div>
+        </div>
+        <!-- ./REGISTRATION MODAL -->
+
+        <!-- PASSWORD RESET MODAL -->
+        <forgot-password-modal></forgot-password-modal>
+        <!-- ./PASSWORD RESET MODAL -->
+
+        <!-- SHIPPINGCOSTS MODAL -->
+        <div id="shippingscosts-modal-wrapper">
+            <div class="modal fade" id="shippingscosts" tabindex="-1" role="dialog">
+            </div>
+        </div>
+        <!-- ./SHIPPINGCOSTS MODAL -->
     </div>
 </div>
 
@@ -61,8 +112,11 @@
     };
 </script>
 
+
 {{ Loader.include_components() }}
+
 {{ LayoutContainer.show("Ceres::Script.Loader") }}
+
 {{ Translations.add( "Ceres", "Template" ) }}
 {% if ceresConfig.log.performanceLevel  == 'development' %}
     <script src="{{ plugin_path('Ceres') }}/js/dist/ceres-vendor.js"></script>
@@ -77,8 +131,34 @@
 
 {{ LayoutContainer.show("Ceres::Script.AfterScriptsLoaded") }}
 
+<script>
+    vueEventHub = new Vue();
+
+    {% if ceresConfig.log.checkSyntax %}
+        var rootElement = document.getElementById("vue-app");
+        rootElement.innerHTML = rootElement.innerHTML.replace(/(?:^|\s)(?::|v-bind:)\S+=(?:""|'')/g, '');
+
+        var vueApp = new Vue({
+            store: window.ceresStore
+        });
+
+        vueApp.$mount( rootElement.cloneNode(true) );
+
+        if ( vueApp.$el.id === "vue-app")
+        {
+            document.body.replaceChild( vueApp.$el, rootElement );
+        }
+    {% else %}
+        var vueApp = new Vue({
+            el: "#vue-app",
+            store: window.ceresStore
+        });
+    {% endif %}
+</script>
+
 {% block PartialFooterLatest %}
 {% endblock %}
-<div id="xxlogin" style="display:none;"><!-- BECAUSE OF ISSUES --></div>
+
+{{ get_shop_builder_scripts( "latest", ceresConfig.log.performanceLevel == 'live') }}
 </body>
 </html>
