--- a/resources/views/PageDesign/PageDesignLogin.twig
+++ b/resources/views/PageDesign/PageDesignLogin.twig
@@ -23,7 +23,7 @@
     {% endfor %}
 </head>
 
-<body>
+<body class="blue-berry-login-body" style="background-image: url('{{ plugin_path('BlueBerry') }}/images/screener-bg-small.jpg');">
 <script>
     if('ontouchstart' in document.documentElement)
     {
