--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -10,11 +10,24 @@ body>#vue-app, body>#vue-error {
     background-color: transparent;
 }
 
-.mainmenu {
+.mainmenu, .login-view-title {
     visibility: hidden;
 }
 
 .footer-content, .footer-features,
 .wrapper-main header .container-max>.row {
     display: none;
+}
+
+
+#page-body {
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    margin-bottom: 30px;
+    text-align: right;
+    background-color: rgba(255, 255, 255, 0.7);
 }
