--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -1,6 +1,7 @@
 {% extends getPartial('page-design-login') %}
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 {% set gCapture = config("Ceres.global.google_recaptcha_api_key") %}
+{% set backlink = request.get("backlink") %}
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
@@ -13,7 +14,6 @@
 {% endblock %}
 
 {% block PageBody %}
-
 <script type="x/template" id="vue-login">
     <div class="login-pwd-reset">
         <form :id="'login-form-' + _uid" class="login-container">
@@ -50,6 +50,12 @@
                 </div>
             </div>
         </form>
+    </div>
+</script>
+
+<script type="x/template" id="vue-login-view" >
+    <div class="container-max login">
+        <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
     </div>
 </script>
 {% endblock %}
