--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -58,4 +58,6 @@
         <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
     </div>
 </script>
+
+<login-view template="#vue-login-view"></login-view>
 {% endblock %}
