--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -6,60 +6,56 @@
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <title>{{ trans("Ceres::Template.login") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
-    <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v=6" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v={{ 'now'|date('U') }}" rel="stylesheet" type="text/css" media="all" />
 {% endblock %}
 
 {% block PartialFooterLatest %}
-    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v=4"></script>
+    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v={{ 'now'|date('U') }}"></script>
 {% endblock %}
 
 {% block PageBody %}
 <script type="x/template" id="vue-login">
     <div class="login-pwd-reset">
-        <form :id="'login-form-' + _uid" class="login-container">
-            <div :class="{'modal-body': modalElement}">
+        <form :id="'login-form-' + _uid" class="login-container row">
 
-                <div class="row">
-                    <div class="col-sm-5">
-                        <div class="col-sm-8">
-                        </div>
-                    </div>
-                    <div class="col-sm-7">
-                        <div class="col-sm-5">
-                            <div class="input-unit" data-validate="mail">
-                                {% set uid_mail = uid() %}
-                                <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
-                                <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
-                            </div>
-                            <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
-                        </div>
-                        <div class="col-sm-5">
-                            <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
-                                {% set uid_pwd = uid() %}
-                                <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
-                                <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
-                                <br/>
-                                <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
-                            </div>
-                            <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
-                        </div>
-                        <div class="col-sm-2">
-                            {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
-                            <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
-                                <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
-                                {{ trans("Ceres::Template.login") }}
-                            </button>
-                        </div>
-                    </div>
+            <div class="col-sm-5">
+                <div class="col-sm-8">
                 </div>
-
             </div>
+            <div class="col-sm-7">
+                <div class="col-sm-5 ">
+                    <div class="input-unit" data-validate="mail">
+                        {% set uid_mail = uid() %}
+                        <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
+                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
+                    </div>
+                    <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
+                </div>
+                <div class="col-sm-5">
+                    <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
+                        {% set uid_pwd = uid() %}
+                        <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
+                        <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
+                        <br/>
+                        <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
+                    </div>
+                    <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
+                </div>
+                <div class="col-sm-2">
+                    {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+                    <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
+                        <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
+                        {{ trans("Ceres::Template.login") }}
+                    </button>
+                </div>
+            </div>
+
         </form>
     </div>
 </script>
 
 <script type="x/template" id="vue-login-view" >
-    <div class="container-max login">
+    <div class="container-fluid login">
         <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
     </div>
 </script>
