--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -3,11 +3,11 @@
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
     <title>{{ trans("Ceres::Template.regRegister") }} | {{ trans("Ceres::Template.headerCompanyName") }}</title>
-    <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v=4" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v={{ 'now'|date('U') }}" rel="stylesheet" type="text/css" media="all" />
 {% endblock %}
 
 {% block PartialFooterLatest %}
-    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v=5"></script>
+    <script src="{{ plugin_path('BlueBerry') }}/js/blue-berry.js?v={{ 'now'|date('U') }}"></script>
 {% endblock %}
 
 
