--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-sm-7">
-                <div class="col-sm-5 ">
+                <div class="col-sm-4 pull-left">
                     <div class="input-unit" data-validate="mail">
                         {% set uid_mail = uid() %}
                         <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
@@ -31,7 +31,7 @@
                     </div>
                     <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-4 pull-left">
                     <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
                         {% set uid_pwd = uid() %}
                         <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
@@ -41,7 +41,7 @@
                     </div>
                     <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4 pull-left">
                     {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
                     <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
                         <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
