--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -29,8 +29,6 @@ body>#vue-app, body>#vue-error {
     height: auto;
     bottom: 0px;
     left: 0px;
-    border-top: 1px solid #cccccc;
-    border-bottom: 1px solid #cccccc;
     margin-bottom: 30px;
     text-align: right;
     background-color: rgba(255, 255, 255, 0.7);
@@ -50,4 +48,11 @@ body>#vue-app, body>#vue-error {
     font-size: 14px;
     line-height: 16px;
     color: #666;
+}
+
+.bb-login-holder {
+    padding: 15px;
+    text-align: right;
+    border-top: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
 }
