--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -15,47 +15,43 @@
 
 {% block PageBody %}
 <script type="x/template" id="vue-login">
-    <div class="login-pwd-reset">
-        <form :id="'login-form-' + _uid" class="login-container row">
-
-            <div class="col-sm-5">
-                <div class="col-sm-8">
-                </div>
+    <form :id="'login-form-' + _uid" class="login-container row">
+        <div class="col-sm-5">
+            <div class="col-sm-8">
             </div>
-            <div class="col-sm-7">
-                <div class="col-sm-4 pull-left">
-                    <div class="input-unit" data-validate="mail">
-                        {% set uid_mail = uid() %}
-                        <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
-                        <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
-                    </div>
-                    <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
+        </div>
+        <div class="col-sm-7">
+            <div class="col-sm-4 pull-left">
+                <div class="input-unit" data-validate="mail">
+                    {% set uid_mail = uid() %}
+                    <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
+                    <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
                 </div>
-                <div class="col-sm-4 pull-left">
-                    <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
-                        {% set uid_pwd = uid() %}
-                        <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
-                        <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
-                        <br/>
-                        <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
-                    </div>
-                    <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
-                </div>
-                <div class="col-sm-4 pull-left">
-                    {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
-                    <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
-                        <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
-                        {{ trans("Ceres::Template.login") }}
-                    </button>
-                </div>
+                <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
             </div>
-
-        </form>
-    </div>
+            <div class="col-sm-4 pull-left">
+                <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
+                    {% set uid_pwd = uid() %}
+                    <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
+                    <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
+                    <br/>
+                    <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
+                </div>
+                <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
+            </div>
+            <div class="col-sm-4 pull-left">
+                {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+                <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
+                    <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
+                    {{ trans("Ceres::Template.login") }}
+                </button>
+            </div>
+        </div>
+    </form>
 </script>
 
 <script type="x/template" id="vue-login-view" >
-    <div class="container-fluid login">
+    <div class="container-fluid login bb-login-holder">
         <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
     </div>
 </script>
