--- a/resources/views/PageDesign/PageDesignLogin.twig
+++ b/resources/views/PageDesign/PageDesignLogin.twig
@@ -41,7 +41,6 @@
         </div>
 
         <div class="wrapper wrapper-main {% if ceresConfig.header.fixNavBarPos %}isSticky{% endif %}">
-            {% include getPartial('header') %}
 
             <div id="page-body" class="main">
                 {% block PageBody %}
@@ -49,33 +48,20 @@
                 {% endblock %}
             </div>
 
-            {% include getPartial('footer') %}
-
             {% block PartialFooter %}
             {% endblock %}
         </div>
 
-        {% if basket is not defined %}
-            {% set basket = services.basket.getBasketForTemplate() %}
-        {% endif %}
-        {% if ceresConfig.basket.previewType == "right" %}
-            <div class="wrapper wrapper-right">
-                <basket-preview :show-net-prices={{ showNetPrices | json_encode }}></basket-preview>
-            </div>
-        {% endif %}
-
         <div class="wrapper wrapper-bottom">
             <!-- LOGIN MODAL -->
             <div id="login-modal-wrapper">
-                <div class="modal fade login-modal" id="login" tabindex="-1" role="dialog">
-                </div>
+                <div class="modal fade login-modal" id="login" tabindex="-1" role="dialog"></div>
             </div>
             <!-- ./LOGIN MODAL -->
 
             <!-- REGISTRATION MODAL -->
             <div id="simple-registration-modal-wrapper">
-                <div class="modal fade" id="registration" tabindex="-1" role="dialog">
-                </div>
+                <div class="modal fade" id="registration" tabindex="-1" role="dialog"></div>
             </div>
             <!-- ./REGISTRATION MODAL -->
 
@@ -85,8 +71,7 @@
 
             <!-- SHIPPINGCOSTS MODAL -->
             <div id="shippingscosts-modal-wrapper">
-                <div class="modal fade" id="shippingscosts" tabindex="-1" role="dialog">
-                </div>
+                <div class="modal fade" id="shippingscosts" tabindex="-1" role="dialog"></div>
             </div>
             <!-- ./SHIPPINGCOSTS MODAL -->
         </div>
@@ -107,7 +92,6 @@
             urlTrailingSlash: {{ urls.appendTrailingSlash | json_encode }}
         };
     </script>
-
 
     {{ Loader.include_components() }}
 
