--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -17,7 +17,17 @@
 <script type="x/template" id="vue-login">
     <form :id="'login-form-' + _uid" class="login-container row">
         <div class="col-sm-5">
-            <div class="col-sm-8"></div>
+            <div class="col-sm-8">
+                <div class="col-sm-8 pull-left">
+                    {{ trans("BlueBerry::Text.loginTextDescription") }}
+                </div>
+                <div class="col-sm-2 pull-left">
+                I
+                </div>
+                <div class="col-sm-2 pull-left">
+                I
+                </div>
+            </div>
         </div>
         <div class="col-sm-7">
             <div class="col-sm-5 pull-left">
