--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -46,8 +46,8 @@ body>#vue-app, body>#vue-error {
     width: 100%;
     height: auto;
     border-top: 1px solid #ddd;
-    font-size: 14px;
-    line-height: 16px;
+    font-size: 12px;
+    line-height: 14px;
     color: #666;
 }
 
@@ -56,4 +56,9 @@ body>#vue-app, body>#vue-error {
     text-align: right;
     border-top: 1px solid #cccccc;
     border-bottom: 1px solid #cccccc;
+}
+
+.loginTextDescription {
+    font-size: 12px;
+    line-height: 14px;
 }
