Added Language selector

--- a/resources/views/PageDesign/PageDesignLogin.twig
+++ b/resources/views/PageDesign/PageDesignLogin.twig
@@ -30,10 +30,7 @@
             document.body.classList.add("no-touch");
         }
     </script>
-    {% set headerContainer = LayoutContainer.show("Ceres::Header") | trim %}
-    {% if headerContainer is empty %}
-        {% include "Ceres::PageDesign.Partials.Header.DefaultHeader" %}
-    {% endif %}
+    {% include "BlueBerry::PageDesign.TopHeader" %}
     <div id="vue-app">
         <div class="wrapper wrapper-top">
             <!-- messages -->
