--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block PageBody %}
-
+{{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
 <script type="x/template" id="vue-registration">
     <div>
         <div class="modal-body">
@@ -26,19 +26,8 @@
 
                 <div class="col-sm-6" v-if="!guestMode">
                     <div class="input-unit" :class="{'no-bottom media-xs-d': modalElement}" data-validate="password" ref="passwordInput">
-                        <popper v-cloak trigger="focus" placement="left" ref="passwordHint">
-                            {% set uid_pwd = uid() %}
-                            <input slot="handle" type="password" name="password" id="{{ uid_pwd }}" v-model="password">
-                            <div slot="title">
-                                {{ trans("Ceres::Template.regPasswordHintTitle") }}
-                            </div>
-                            <ul slot="content" class="pl-3">
-                                <li>{{ trans("Ceres::Template.regPasswordHintLength") }}</li>
-                                <li>{{ trans("Ceres::Template.regPasswordHintDigit") }}</li>
-                                <li>{{ trans("Ceres::Template.regPasswordHintChar") }}</li>
-                            </ul>
-                        </popper>
-
+                        {% set uid_pwd = uid() %}
+                        <input slot="handle" type="password" name="password" id="{{ uid_pwd }}" v-model="password">
                         <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.regPassword") }}*</label>
                     </div>
                 </div>
