--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -65,6 +65,22 @@ body>#vue-app, body>#vue-error {
 
 .registeration-holder {
     padding: 15px;
-    background: #fff;
+    background: #ddd;
     width: 800px;
+}
+
+.space10 {
+    clear: both;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 10px;
+}
+
+.space20 {
+    clear: both;
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 20px;
 }
