--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -28,12 +28,11 @@ body>#vue-app, body>#vue-error {
     position: fixed;
     width: 100%;
     height: auto;
-    bottom: 0px;
-    left: 0px;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     text-align: right;
     background-color: rgba(255, 255, 255, 0.7);
-    margin-bottom: 100px;
+    left: 0px;
+    top: 70%;
 }
 
 .bb-main-disclaimer {
@@ -87,4 +86,13 @@ body>#vue-app, body>#vue-error {
     position: relative;
     width: 100%;
     height: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    #page-body {
+        position: relative;
+        left: inherit;
+        top: inherit;
+        margin-top: 50px;
+    }
 }
