--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -15,7 +15,7 @@
 
 {% block PageBody %}
 <script type="x/template" id="vue-login">
-    <form :id="'login-form-' + _uid" class="login-container row">
+    <form :id="'login-form-' + _uid" class="login-container row clearfix">
         <div class="col-sm-6">
             <div class="col-sm-10 pull-left loginTextDescription">
                 {{ trans("BlueBerry::Text.loginTextDescription") }}
@@ -55,12 +55,14 @@
                 </button>
             </div>
         </div>
+        <div class="clearfix"><!-- --></div>
     </form>
 </script>
 
 <script type="x/template" id="vue-login-view" >
-    <div class="container-fluid login login-pwd-reset bb-login-holder">
+    <div class="container-fluid login login-pwd-reset bb-login-holder clearfix">
         <login template="#vue-login" backlink="{{ backlink | url_encode }}" has-to-forward="true"></login>
+        <div class="clearfix"><!-- --></div>
     </div>
 </script>
 
