--- a/resources/css/blue-berry.css
+++ b/resources/css/blue-berry.css
@@ -57,7 +57,8 @@ body>#vue-app, body>#vue-error {
     text-align: right;
     background-color: rgba(255, 255, 255, 0.7);
     left: 0px;
-    top: 70%;
+    top: 50%;
+    transform: translate(0%,-50%);
 }
 
 
