--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -1,4 +1,5 @@
 {% extends getPartial('page-design-login') %}
+{% set pageDesignType = "register" %}
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
