--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -2,6 +2,7 @@
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 {% set gCapture = config("Ceres.global.google_recaptcha_api_key") %}
 {% set backlink = request.get("backlink") %}
+{% set pageDesignType = "login" %}
 
 {% block PartialHead %}
     <meta name="robots" content="NOINDEX, NOFOLLOW">
