--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -17,46 +17,57 @@
 {% block PageBody %}
 <script type="x/template" id="vue-login">
     <form :id="'login-form-' + _uid" class="login-container row clearfix">
-        <div class="col-sm-6">
-            <div class="col-sm-10 col-xs-12  pull-left loginTextDescription">
-                {{ trans("BlueBerry::Text.loginTextDescription") }}
-            </div>
-            <div class="col-sm-1 col-xs-6 pull-left">
+
+        <div class="col-sm-12">
+            {{ trans("BlueBerry::Text.loginTextDescription") }}
+        </div>
+
+        <div class="clearfix space20"><!-- --></div>
+
+        <div class="col-sm-12">
+            <div class="col-sm-6 col-xs-6 pull-left">
                 <a href="/customer-register"><span class="fa fa-user"></span></a>
             </div>
-            <div class="col-sm-1 col-xs-6 pull-left">
+            <div class="col-sm-6 col-xs-6 pull-left">
                 <a href="/contact">
                     <span class="fa fa-envelope"></span>
                 </a>
             </div>
         </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="col-sm-5 pull-left">
-                <div class="input-unit" data-validate="mail">
-                    {% set uid_mail = uid() %}
-                    <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
-                    <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
-                </div>
-                <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
+
+        <div class="clearfix space20"><!-- --></div>
+
+        <div class="col-sm-12">
+            <div class="input-unit" data-validate="mail">
+                {% set uid_mail = uid() %}
+                <input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
+                <label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
             </div>
-            <div class="col-sm-4 pull-left">
-                <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
-                    {% set uid_pwd = uid() %}
-                    <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
-                    <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
-                    <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
-                </div>
-                <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
-            </div>
-            <div class="col-sm-3 pull-left">
-                {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
-                <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
-                    <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
-                    {{ trans("Ceres::Template.login") }}
-                </button>
-            </div>
-            <div class="clearfix"><!-- --></div>
+            <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
         </div>
+
+        <div class="clearfix space10"><!-- --></div>
+
+        <div class="col-sm-12">
+            <div class="input-unit" :class="{'no-bottom': modalElement}" data-validate="text">
+                {% set uid_pwd = uid() %}
+                <input type="password" name="password" id="{{ uid_pwd }}" v-model="password">
+                <label for="{{ uid_pwd }}">{{ trans("Ceres::Template.loginPassword") }}*</label>
+                <a href="javascript:void(0)" @click="showResetPwdView" class="small">{{ trans("Ceres::Template.loginForgotPassword") }}?</a>
+            </div>
+            <span class="error-msg">{{ trans("Ceres::Template.loginEmptyPassword") }}</span>
+        </div>
+
+        <div class="clearfix space20"><!-- --></div>
+
+        <div class="col-sm-12">
+            {{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+            <button @click.prevent="validateLogin" :disabled="isDisabled" class="btn btn-primary btn-medium" :class="{'btn-right': !modalElement}">
+                <i class="fa fa-user" v-waiting-animation="isDisabled"></i>
+                {{ trans("Ceres::Template.login") }}
+            </button>
+        </div>
+
         <div class="clearfix"><!-- --></div>
     </form>
 </script>
