--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block PageBody %}
-{{ component( "Ceres::Customer.Components.AddressInputGroup.AddressInputGroup" ) }}
+{{ component( "BlueBerry::Customer.AddressInputGroup.AddressInputGroup" ) }}
 <script type="x/template" id="vue-registration">
     <div class="container registration-holder">
         <div class="row" :id="'registration' + _uid">
