--- a/resources/views/content/login.twig
+++ b/resources/views/content/login.twig
@@ -80,5 +80,44 @@
     </div>
 </script>
 
+ <script type="x/template" id="vue-forgot-password-modal">
+	<form :id="'reset-pwd-form-' + _uid" class="reset-pwd-container login-pwd-reset">
+		<div class="modal fade" id="resetPwd" ref="pwdModal" tabindex="-1" role="dialog">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<div class="modal-title h3">{{ trans("Ceres::Template.loginForgotPassword") }}</div>
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					</div>
+					<div class="modal-body">
+						<div class="alert alert-info w-100 pwd-forgot-info">
+							<span class="info-badge">{{ trans("Ceres::Template.loginForgotPasswordInfo") }}</span>
+						</div>
+						<div class="row">
+							<div class="col-12">
+								<div class="input-unit no-bottom" data-validate="mail">
+									{% set uid_mail = uid() %}
+									<input type="email" name="email" id="{{ uid_mail }}" v-model="username" data-autofocus>
+									<label for="{{ uid_mail }}">{{ trans("Ceres::Template.loginEmail") }}*</label>
+								</div>
+								<span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<div>
+							{{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
+							<button @click.prevent="validateResetPwd" :disabled="isDisabled" class="btn btn-primary btn-medium">
+								<i v-waiting-animation="isDisabled" class="fa fa-paper-plane-o" aria-hidden="true"></i>
+								{{ trans("Ceres::Template.loginSend") }}
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+</script>
+
 <login-view template="#vue-login-view"></login-view>
 {% endblock %}
