--- a/resources/views/content/register.twig
+++ b/resources/views/content/register.twig
@@ -86,7 +86,7 @@
         </div>
     </div>
 </script>
-
+<script type="x/template" id="vue-forgot-password-modal"></div>
 <div class="row">
     <registration template="#vue-registration" backlink="{{ request.get("backlink") | url_encode }}"></registration>
 </div>
