update the views

--- a/resources/views/content/BlueBerry.twig
+++ b/resources/views/content/BlueBerry.twig
@@ -1,5 +1,5 @@
-<style>
-.wrapper-main #page-header.top-bar {
+<style type="text/css">
+#page-header.top-bar {
     background-color: #ffffff !important;
 }
 </style>
