--- a/resources/views/content/BlueBerry.twig
+++ b/resources/views/content/BlueBerry.twig
@@ -1,5 +1,1 @@
-<style type="text/css">
-#page-header.top-bar {
-    background-color: #ffffff !important;
-}
-</style>
+<link href="{{ plugin_path('BlueBerry') }}/css/blue-berry.css?v={{ 'now'|date('U') }}" rel="stylesheet" type="text/css" media="all" />
