Update header from theme to see if is loading

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -1,3 +1,4 @@
+{% extends getPartial('header') %}
 {% import "Ceres::PageDesign.Macros.LayoutContainer" as LayoutContainer %}
 
 {{ component( "Ceres::Customer.Components.UserLoginHandler" ) }}
